<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>fr.ymanvieu.trading</groupId>
	<artifactId>trading</artifactId>
	<version>3.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.1.RELEASE</version>
	</parent>

	<modules>
		<module>trading-common</module>
		<module>trading-test</module>
		<module>trading-data-collect</module>
		<module>trading-ng</module>
		<module>trading-webapp</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.timestamp>${maven.build.timestamp}</project.build.timestamp>
		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
		
		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
		
		<java.version>11</java.version>
		<junitparams.version>1.1.0</junitparams.version>
		<mapstruct.version>1.4.0.Beta1</mapstruct.version>
	</properties>
</project>